--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,4 +3,5 @@
 <% @restaurants.each do |restaurant| %>
   <h3><%= restaurant.name %></h3>
   <p><%= restaurant.category %></p>
+  <p> <%= link_to "See more", restaurant_path(restaurant) %></p>
 <% end %>
