--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Restaurants</h1>
 
+<%= link_to "Add a restaurant", new_restaurant_path %>
+
 <% @restaurants.each do |restaurant| %>
   <h3><%= restaurant.name %></h3>
   <p><%= restaurant.category %></p>
