added review field in restaurants#show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <div class="navbar-wagon">
+    <!-- Logo -->
+      <%= link_to image_tag("logo.png"), "/", class: "text-center" %>
+
+    <!-- Button (call-to-action) -->
+      <%= link_to "Add a restaurant", new_restaurant_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+
+    </div>
     <%= yield %>
   </body>
 </html>
