--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -11,3 +11,4 @@
 <p><%= link_to "Add a review", new_restaurant_review_path(@restaurant) %></p>
 <p><%= link_to "Back", restaurants_path %></p>
 
+<%= render "review_form" %>
