--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @restaurant do |f| %>
   <%= f.input :name %>
-  <%= f.input :category %>
+  <%= f.input :category, prompt: "Select a category", collection: Restaurant::CATEGORIES %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
   <%= f.submit %>
