--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,7 +8,7 @@
   <p><%= review.rating %></p>
 <% end %>
 
-<p><%= link_to "Add a review", new_restaurant_review_path(@restaurant) %></p>
+<p><%= link_to "Add a review", restaurant_reviews_path(@restaurant) %></p>
 <p><%= link_to "Back", restaurants_path %></p>
 
 <%= render "review_form" %>
