--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -54,15 +54,15 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: #81CEFA;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid #81CEFA;
+  opacity: 1
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #ac2626;
-  border-color: #ac2626;
+  opacity: 0.6;
 }
 
 /* Navbar search form */
