--- a/app/views/restaurants/_review_form.html.erb
+++ b/app/views/restaurants/_review_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating, collection: 0..5, prompt: "--" %>
-  <%= f.submit "add a review", class: "btn btn-primary" %>
+  <%= f.submit "Add a review", class: "btn btn-primary" %>
 <% end %>
