--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,28 @@
-<h1><%= @restaurant.name %></h1>
-<p><%= @restaurant.category %></p>
-<p><%= @restaurant.address %></p>
-<p><%= @restaurant.phone_number %></p>
+<div class="restaurant">
+  <div class='restaurant-infos text-center'>
+    <h1><%= @restaurant.name %></h1>
+    <p><i class="fa fa-cutlery" aria-hidden="true"></i> <%= @restaurant.category.upcase %></p>
+    <p id="address"><%= @restaurant.address %></p>
+    <p><i class="fa fa-phone" aria-hidden="true"></i> <%= @restaurant.phone_number %></p>
+    <div id="map" style="height: 300px">
+    </div>
+  </div>
 
-<% @restaurant.reviews.each do |review| %>
-  <p><%= review.content %></p>
-  <p><%= review.rating %></p>
-<% end %>
+  <div class="reviews">
+    <div class="text-center">
+      <h3>Reviews</h3>
+      <% @restaurant.reviews.each do |review| %>
+        <div class="review">
+          <p><%= review.content %></p>
+          <p><%= review.rating %></p>
+        </div>
+      <% end %>
+    </div>
 
-<p><%= link_to "Add a review", restaurant_reviews_path(@restaurant) %></p>
-<p><%= link_to "Back", restaurants_path %></p>
+    <div class="form">
+      <h3 class='text-center'>Add a review</h3>
+      <%= render "restaurants/review_form" %>
+    </div>
+  </div>
+</div>
 
-<%= render "review_form" %>
